--- a/chemodan__shop/css/smoothproducts.css
+++ b/chemodan__shop/css/smoothproducts.css
@@ -95,6 +95,12 @@ html, body {
 	border-radius: 4px;
 	border: 1px solid #eeeeee;
 	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.10);
+	-moz-user-select: none;
+    -o-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .sp-large a img {
 	max-width: 100%;
