--- a/chemodan__shop/css/style.css
+++ b/chemodan__shop/css/style.css
@@ -754,11 +754,13 @@ body {
   text-transform: uppercase;
   background: #3498db;
   padding: 8px 0;
+  height: 34px;
 }
 .sidenav__item {
   border: 1px solid #e8e8e8;
   border-top: 0;
   padding: 0 3px;
+  /*height: 235px;*/
 }
 .sidenav__item ul {
   position: relative;
@@ -771,6 +773,7 @@ body {
   border-bottom: 1px solid #e8e8e8;
   /*position: relative;*/
   width: 242px;
+  /*height: 39px;*/
   transition: width 0.2s ease-in-out;
 }
 .sidenav__item li:first-child .sidenav__more {
@@ -1350,7 +1353,7 @@ body {
   left: 0px;
   top: 35px;
   width: 920px;
-  height: 233px;
+  height: 235px;
   background: #fff;
   padding: 18px 16px;
   display: flex;
@@ -1421,6 +1424,12 @@ body {
   width: 415px;
   height: 52px;
 }
+.dropdown__item_brand3 {
+  margin-right: 20px;
+}
+.dropdown__item_brand4 {
+  margin-left: 20px;
+}
 .dropdown__item_type {
   width: 415px;
   align-items: center;
@@ -1430,6 +1439,10 @@ body {
 }
 .dropdown__item_price {
   width: 175px;
+}
+.dropdown__item_price2 {
+  width: auto;
+  height: 92px;
 }
 .dropdown__item_fc {
   justify-content: flex-start;
@@ -1453,6 +1466,9 @@ body {
 .dropdown__item_akcii:hover {
   box-shadow: 0px 0px 1px 1px #9bd5fa;
   border-radius: 1px;
+}
+.dropdown__item_akcii2 {
+  height: 93px;
 }
 .dropdown__showmore {
   height: 90px;
@@ -1597,8 +1613,8 @@ body {
 /*Banner*/
 .banner {
   width: 825px;
-  height: 233px;
-  /*overflow: hidden;*/
+  height: 235px;
+  overflow: hidden;
 }
 .banner .slick-track {
   padding: 0 !important;
@@ -1647,6 +1663,8 @@ body {
   border-top: 0;
   transition: 0.2s ease-in-out;
   cursor: pointer;
+  height: 39px;
+  justify-content: center;
 }
 .bannercat__item span {
   font: 500 11px "Roboto",sans-serif;
@@ -1659,6 +1677,8 @@ body {
   filter: none;
 }
 .bannercat__img {
+  -webkit-filter: grayscale(100%);
+  -webkit-filter: grayscale(1);
   filter: grayscale(100%);
 }
 .bannercat__img_1 {
@@ -2464,6 +2484,11 @@ body {
   height: 460px;
 }
 
+.modalrem {
+  width: 385px;
+  height: 280px;
+}
+
 .modalcall {
   width: 460px;
   height: 430px;
@@ -2568,7 +2593,7 @@ body {
   font: 400 13px "Roboto",sans-serif;
   color: #ababab;
   display: inline-block;
-  padding: 0 4px 2px;
+  padding: 0 4px;
 }
 .filterbar__item_np {
   padding-left: 0;
@@ -3168,6 +3193,10 @@ body {
   background-size: contain !important;
 }
 
+.sp-large {
+  height: 309px !important;
+}
+
 .sp-zoom {
   display: none !important;
 }
@@ -3437,7 +3466,7 @@ body {
   top: 30px;
 }
 .sp-thumbs .slick-prev:hover, .sp-thumbs .slick-next:hover {
-  box-shadow: 0 0 0 0;
+  box-shadow: 0 0 0 0 transparent;
 }
 .sp-thumbs .slick-prev:hover i, .sp-thumbs .slick-next:hover i {
   color: #3498db;
@@ -3758,6 +3787,7 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  max-width: 588px;
 }
 .profile__chpass {
   font: 400 14px "Roboto",sans-serif;
@@ -3811,6 +3841,7 @@ body {
   background: url(../img/change.png) center center no-repeat;
   background-size: 100%;
   position: absolute;
+  top: 20px;
   z-index: 2;
 }
 .file_upload span {
@@ -3823,9 +3854,12 @@ body {
   position: absolute;
   width: 143px;
   height: 143px;
+  left: 0;
+  top: 0;
   opacity: 0;
   cursor: pointer;
   z-index: 4;
+  font-size: 0;
 }
 
 .address {
