--- a/chemodan__shop/scss/layout/_content.scss
+++ b/chemodan__shop/scss/layout/_content.scss
@@ -766,7 +766,7 @@ body{
 }
 .dropdown{
 	position: absolute;
-	z-index: 11;
+	z-index: 15;
 	left: 0px;
     top: 35px;
 	width: 920px;
@@ -1081,16 +1081,19 @@ body{
 /*Banner categories*/
 .bannercat{
 	width: 95px;
+	.slick-track{
+		padding: 0 !important;
+	}
 	&__item{
 		width: 100%;
-		display: flex;
+		display: flex !important;
 		flex-direction: column;
 		align-items: center;
-		border: 1px solid #e8e8e8;
-		border-top: 0;
+		border: 1px solid #e8e8e8 !important;
+		border-top: 0 !important;
 		transition: 0.2s ease-in-out;
 		cursor: pointer;
-		height: 39px;
+		height: 39px !important;
     	justify-content: center;
 		span{
 			font: 500 11px "Roboto",sans-serif;
