--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -37,10 +37,7 @@ body{
 [type="number"]{
 	-moz-appearance: textfield;
 }
-.fixed{
-	position: fixed;
-	width: 100%;
-}
+
 
 /* titles */
 p{	
@@ -155,6 +152,7 @@ h3{
 		justify-content: flex-start;
 		align-items: center;
 		padding: 4px 0;
+		width: 100%;
 		a{
 			color: #2d2d2d;
 			font-family: 'Roboto', sans-serif;
@@ -962,7 +960,7 @@ h3{
 	width: 892px;
 	display: flex;
 	justify-content: space-between;
-	align-items: flex-start;
+	align-items: center;
 	ul{
 		list-style: none;
 	}
@@ -1017,6 +1015,15 @@ h3{
 			color: #000;
 		}
 	}
+}
+a.dropdown__more{
+	color: #a91c5f;
+	font-family: 'Roboto', sans-serif;
+	font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    line-height: normal;
+    text-transform: uppercase;
 }
 .dropdowncatalog{
 	flex-wrap: wrap;
@@ -1424,6 +1431,7 @@ h3{
     		i{
     			color: #fff;
     			font-size: 10px;
+    			padding: 7px;
     		}
 		}
 		input{
@@ -2971,6 +2979,11 @@ h3{
 		align-items: center;
 	}
 	&__inputbox{
+		img.icon{
+			width: 31px;
+			cursor: pointer;
+			margin-left: -6px;
+		}
 		label{
 			color: #515151;
 			font-family: 'Roboto', sans-serif;
@@ -2999,7 +3012,7 @@ h3{
 			margin-right: 8px;
 		}
 		&_2{
-			width: 288px;
+			width: 260px;
 			margin-right: 9px;
 		}
 		&_3{
@@ -3962,6 +3975,9 @@ h3{
 .myinfo{
 	display: none;
 	padding: 20px 30px;
+	&__cont{
+
+	}
 	&__input{
 		display: flex;
 		justify-content: flex-start;
@@ -3975,7 +3991,7 @@ h3{
 		    width: 140px;
 		}
 		input{
-			width: 315px;
+			width: 290px;
 		    height: 24px;
 		    border-radius: 6px;
 		    color: #192028;
@@ -4009,6 +4025,77 @@ h3{
 		border-bottom: 1px dashed #aeaeae;
 		margin-top: 30px;
 		display: inline-block;
+		cursor: pointer;
+	}
+	&__cpform{
+		margin: 15px 0 0 0;
+		button{
+			margin-left: 0;
+		}
+	}
+	&__cont{
+		display: flex;
+    	justify-content: space-between;
+	}
+	&__cpformtoggle{
+		display: none;
+	}
+}
+.profile{
+	&__img{
+		width: 143px;
+	    height: 143px;
+	    border-radius: 100%;
+	    border: 1px solid #a5a5a5;
+	    overflow: hidden;
+	    text-align: center;
+	    margin-bottom: 18px;
+	    position: relative;
+	    img{
+	    	margin-top: -30px;
+    		margin-left: -15px;
+	    }
+	}
+}
+.file{
+	&_upload{
+		overflow: hidden;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 143px;
+	    height: 143px;
+	    display: flex;
+	    justify-content: center;
+	    align-items: center;
+	    box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.7) inset;
+	    &:before{
+	    	content: "";
+		    height: 105px;
+		    width: 105px;
+		    background: url(../img/change.png) center center no-repeat;
+		    background-size: 100%;
+		    position: absolute;
+		    top: 20px;
+		    z-index: 2;
+	    }
+	    span{
+	    	font: 500 21px "Roboto",sans-serif;
+		    color: #fff;
+		    position: relative;
+		    z-index: 3;
+	    }
+	    [type="file"]{
+	    	position: absolute;
+		    width: 143px;
+		    height: 143px;
+		    left: 0;
+		    top: 0;
+		    opacity: 0;
+		    cursor: pointer;
+		    z-index: 4;
+		    font-size: 0;
+	    }
 	}
 }
 /*Account page end*/
@@ -4132,7 +4219,7 @@ h3{
 		text-align: left;
 	}
 }
-.modallog,.modalreg{
+.modallog,.modalreg,.modalpass{
 	width: 430px;
 	height: 490px;
 	.loginpop, .registerpop{
@@ -4212,6 +4299,9 @@ h3{
 		}
 	}
 }
+.modalpass{
+	height: 240px;
+}
 .modalcall{
 	width: 430px;
 	height: 430px;
@@ -4265,6 +4355,9 @@ h3{
 		height: 40px;
 		border-radius: 20px;
 	}
+}
+.modal18{
+	display: block;
 }
 .modaltown{
 	width: 430px;
@@ -4335,6 +4428,25 @@ h3{
 	z-index: 16;
 	overflow: hidden;
 	display: none;
+	&_2{
+		opacity: 0.34;
+  		-moz-opacity:0.34; 
+  		filter:alpha(opacity=34);
+	}
+}
+.overlay2{
+	background: #000000;
+	position: fixed;
+	top: 0;
+	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	opacity: 0.24;
+  	-moz-opacity:0.24; 
+  	filter:alpha(opacity=24);
+	z-index: 16;
+	overflow: hidden;
+	/*display: none;*/
 	&_2{
 		opacity: 0.34;
   		-moz-opacity:0.34; 
@@ -4649,6 +4761,13 @@ h3{
 		}
 	}
 	/*Balance open page end*/
+	.myinfo{
+		&__input{
+			input{
+				width: 100%;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 767px) {
@@ -5241,6 +5360,7 @@ h3{
 		}
 		&__row{
 			flex-direction: column;
+			cursor: pointer;
 			p{
 				width: 100%;
     			margin: 0;
@@ -5266,16 +5386,25 @@ h3{
     		align-items: flex-start;
 		}
 	}
-	.myinfo__input{
-		flex-direction: column;
-    	align-items: flex-start;
-    	label{
-    		margin-bottom: 5px;
-    	}
-    	input{
-    		width: 100%;
-    	}
-	}
+	.myinfo{
+		&__cont{
+			flex-direction: column-reverse;
+    		align-items: center;
+		}
+		&__box{
+			width: 100%;
+		}
+		&__input{
+			flex-direction: column;
+	    	align-items: flex-start;
+	    	label{
+	    		margin-bottom: 5px;
+	    	}
+	    	input{
+	    		width: 100%;
+	    	}
+		}
+	}	
 	/*Account page end*/
 	/*Account oo page*/
 	.accountoo{
